--- a/notes/10_face_recognition.ipynb
+++ b/notes/10_face_recognition.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "25644f9d",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,8 @@
     "CHA = \"../images/cha.jpg\"\n",
     "SEO = \"../images/seo.jpg\"\n",
     "HARRY = \"../images/harry.jpg\"\n",
+    "HER = \"../images/her.jpg\"\n",
+    "EYE = \"../images/eye.jpg\"\n",
     "\n",
     "FACE_CASCADE = \"../cascade/haarcascade_frontalface_default.xml\"\n",
     "EYE_CASCADE = \"../cascade/haarcascade_eye.xml\""
@@ -82,6 +84,202 @@
     "\n",
     "cv.imshow(\"img\", img)\n",
     "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "4f068786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습. 캠화면에 적용\n",
+    "face_cascade = cv.CascadeClassifier(FACE_CASCADE)\n",
+    "eye_cascade = cv.CascadeClassifier(EYE_CASCADE)\n",
+    "\n",
+    "cap = cv.VideoCapture(0)\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    \n",
+    "    if not ret:\n",
+    "        break\n",
+    "    \n",
+    "    gray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    faces = face_cascade.detectMultiScale(\n",
+    "        gray, scaleFactor=1.1, minNeighbors=20, minSize=(10,10)\n",
+    "    )\n",
+    "    \n",
+    "    if len(faces):\n",
+    "        for face in faces:\n",
+    "            x, y, width, height = face\n",
+    "            cv.rectangle(frame, (x,y), (x+width, y+height), (0,0,255), 2, cv.LINE_AA)\n",
+    "            cv.putText(frame, \"Face\", (x, y-10), cv.FONT_HERSHEY_SIMPLEX, 0.7, (255,255,255), 2)\n",
+    "    \n",
+    "    eyes = eye_cascade.detectMultiScale(\n",
+    "        gray, scaleFactor=1.1, minNeighbors=10, maxSize=(30,30)\n",
+    "    )\n",
+    "    \n",
+    "    if len(eyes):\n",
+    "        for eye in eyes:\n",
+    "            x, y, width, height = eye\n",
+    "            cv.rectangle(frame, (x,y), (x+width, y+height), (0,255,0), 2, cv.LINE_AA)\n",
+    "            cv.putText(frame, \"Eye\", (x, y-10), cv.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 2)\n",
+    "    \n",
+    "    cv.imshow(\"Camera\", frame)\n",
+    "    \n",
+    "    if cv.waitKey(1) == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "acbb49c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습. 귀여운 눈 덮어 씌우기\n",
+    "eye_cascade = cv.CascadeClassifier(EYE_CASCADE)\n",
+    "\n",
+    "img = cv.imread(HER)\n",
+    "eyes_img = cv.imread(EYE)\n",
+    "\n",
+    "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "\n",
+    "eyes = eye_cascade.detectMultiScale(\n",
+    "    gray, scaleFactor=1.1, minNeighbors=5, maxSize=(100,100)\n",
+    ")\n",
+    "\n",
+    "\n",
+    "if len(eyes):\n",
+    "    for i, eye in enumerate(eyes):\n",
+    "        x, y, width, height = eye\n",
+    "        resized_eye = cv.resize(eyes_img, (width, height))\n",
+    "        \n",
+    "        img[y:y+height, x:x+width] = resized_eye\n",
+    "\n",
+    "\n",
+    "cv.imshow(\"IMG\", img)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "0e4f5877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습. 귀여운 눈 덮어 씌우기(영상 ver)\n",
+    "\n",
+    "eye_cascade = cv.CascadeClassifier(EYE_CASCADE)\n",
+    "video = cv.VideoCapture(\"../videos/move.mp4\")\n",
+    "eyes_img = cv.imread(EYE)\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = video.read()\n",
+    "    \n",
+    "    if not ret:\n",
+    "        break\n",
+    "    \n",
+    "    gray = cv.cvtColor(frame, cv.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    eyes = eye_cascade.detectMultiScale(\n",
+    "        gray, scaleFactor=1.1, minNeighbors=100, maxSize=(1000,1000)\n",
+    "    )\n",
+    "    \n",
+    "    if len(eyes):\n",
+    "        for eye in eyes:\n",
+    "            x, y, width, height = eye\n",
+    "            resized_eye = cv.resize(eyes_img, (width, height))\n",
+    "            frame[y:y+height, x:x+width] = resized_eye\n",
+    "    \n",
+    "    \n",
+    "    resized_frame = cv.resize(frame, None, fx=0.25, fy=0.25)\n",
+    "    cv.imshow(\"Video\", resized_frame)\n",
+    "    \n",
+    "    if cv.waitKey(1) == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "video.release()\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "57549e34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "capture_1.png 저장!\n",
+      "capture_2.png 저장!\n",
+      "capture_3.png 저장!\n",
+      "capture_4.png 저장!\n",
+      "capture_5.png 저장!\n",
+      "capture_6.png 저장!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실습. 웹캠을 통해 들어오는 영상을 이용해 움직임이 감지될 경우 해당 프레임을 캡쳐해서 파일로 저장하는 프로그램 만들기\n",
+    "\n",
+    "cap = cv.VideoCapture(0)\n",
+    "backSub = cv.createBackgroundSubtractorMOG2()\n",
+    "count = 1\n",
+    "capture_cooldown = 0\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    \n",
+    "    if not ret:\n",
+    "        break\n",
+    "    \n",
+    "    Sub = backSub.apply(frame)\n",
+    "    \n",
+    "    contours, _ = cv.findContours(Sub, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "    \n",
+    "    motion_detected = False\n",
+    "    for contour in contours:\n",
+    "        area = cv.contourArea(contour)\n",
+    "        if area > 5000:\n",
+    "            motion_detected = True\n",
+    "            break\n",
+    "    \n",
+    "    if motion_detected and capture_cooldown == 0:\n",
+    "        filename = f\"../output/capture_{count}.png\"\n",
+    "        cv.imwrite(filename, frame)\n",
+    "        print(f\"{filename.split('/')[2]} 저장!\")\n",
+    "        count += 1\n",
+    "        capture_cooldown = 30\n",
+    "    \n",
+    "    if capture_cooldown > 0:\n",
+    "        capture_cooldown -= 1\n",
+    "    \n",
+    "    cv.imshow(\"Camera\", frame)\n",
+    "    \n",
+    "    key = cv.waitKey(1)\n",
+    "    \n",
+    "    if key == ord(\"c\"):\n",
+    "        filename = f\"../output/capture_{count}.png\"\n",
+    "        cv.imwrite(filename, frame)\n",
+    "        print(f\"{filename.split('/')[2]} 저장!\")\n",
+    "        count += 1\n",
+    "    \n",
+    "    elif key == ord(\"q\"):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
     "cv.destroyAllWindows()"
    ]
   }
