--- a/notes/03_edit_image_basic.ipynb
+++ b/notes/03_edit_image_basic.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "473d700f",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,6 @@
     "import cv2 as cv\n",
     "import numpy as np\n",
     "PEACH_PATH = \"../images/peach.jpg\"\n",
-    "CHA_PATH = \"../images/cha.jpg\"\n",
     "PEACH_VIDEO_PATH = \"../videos/peach.mp4\""
    ]
   },
@@ -360,78 +359,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2c16cb83",
+   "execution_count": 22,
+   "id": "71989cfa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 실습6. 이미지 조정\n",
-    "img = cv.imread(CHA_PATH)\n",
-    "img_copy = img.copy()  \n",
-    "\n",
-    "size_down = cv.pyrDown(img)\n",
-    "flip_y = cv.flip(img, 1)\n",
-    "\n",
-    "cv.imshow(\"Down\", size_down)\n",
-    "\n",
-    "height, width = img_copy.shape[:2]\n",
-    "\n",
-    "flip_height, flip_width = flip_y.shape[:2]\n",
-    "\n",
-    "crop_height = 300\n",
-    "crop_width = 200\n",
-    "\n",
-    "start_y = height - crop_height\n",
-    "start_x = width - crop_width\n",
-    "end_y = height\n",
-    "end_x = width\n",
-    "\n",
-    "img_copy[start_y:end_y, start_x:end_x] = flip_y[start_y:end_y, start_x:end_x]\n",
-    "\n",
-    "\n",
-    "flip_small = cv.resize(flip_y, (300, 200))  \n",
-    "small_h, small_w = flip_small.shape[:2]\n",
-    "\n",
-    "img_copy[height-small_h:height, width-small_w:width] = flip_small\n",
-    "cv.imshow(\"CHA\", img_copy)\n",
-    "\n",
-    "cv.waitKey(0)\n",
-    "cv.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71989cfa",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (475,631,3) into shape (238,316,3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      8\u001b[39m dst = cv.flip(img, \u001b[32m1\u001b[39m)\n\u001b[32m     10\u001b[39m height, width, channel = img.shape\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[43mcopied\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mheight\u001b[49m\u001b[43m/\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m/\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m]\u001b[49m = dst\n\u001b[32m     14\u001b[39m cv.show(\u001b[33m\"\u001b[39m\u001b[33mimg\u001b[39m\u001b[33m\"\u001b[39m, copied)\n\u001b[32m     16\u001b[39m cv.waitKey(\u001b[32m0\u001b[39m)\n",
-      "\u001b[31mValueError\u001b[39m: could not broadcast input array from shape (475,631,3) into shape (238,316,3)"
-     ]
-    }
-   ],
-   "source": [
-    "# 실습6. 이미지 조정\n",
-    "img = cv.imread(CHA_PATH)\n",
+    "img = cv.imread(\"../images/cha.jpg\")\n",
     "copied = img.copy()  \n",
     "\n",
     "# 이미지를 1/2로 축소\n",
     "# dst = cv.pyrDown(img)\n",
     "dst = cv.resize(img, None, fx=0.5, fy=0.5)\n",
-    "dst = cv.flip(img, 1)\n",
+    "dst = cv.flip(dst, 1)\n",
     "\n",
     "height, width, channel = img.shape\n",
     "\n",
-    "copied[:int(height/2): , int(width/2): ] = dst\n",
+    "# 축소된 이미지를 지정한 영역 크기에 맞춰 다시 리사이즈\n",
+    "target_height = height - int(height/2)  # 남은 세로 공간\n",
+    "target_width = int(width/2)  # 지정한 가로 공간\n",
     "\n",
-    "cv.show(\"img\", copied)\n",
+    "dst = cv.resize(dst, (target_width, target_height))\n",
+    "\n",
+    "copied[int(height/2): , :int(width/2)] = dst\n",
+    "\n",
+    "cv.imshow(\"img\", copied)\n",
+    "cv.imwrite(\"../output/cha2.jpg\", copied)\n",
     "\n",
     "cv.waitKey(0)\n",
     "cv.destroyAllWindows()"
