--- a/notes/08_contour.ipynb
+++ b/notes/08_contour.ipynb
@@ -258,37 +258,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "51e683b0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:973: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'cv::imshow'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     28\u001b[39m cv.rectangle(target, (x,y), (x+width, y+height), (\u001b[32m0\u001b[39m,\u001b[32m255\u001b[39m,\u001b[32m0\u001b[39m), \u001b[32m2\u001b[39m, cv.LINE_AA)\n\u001b[32m     30\u001b[39m cv.imshow(name, target)\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m \u001b[43mcv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mimshow\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcard\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mindex\u001b[49m\u001b[43m+\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg\u001b[49m\u001b[43m[\u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43mx\u001b[49m\u001b[43m+\u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m:\u001b[49m\u001b[43my\u001b[49m\u001b[43m+\u001b[49m\u001b[43mheight\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     34\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m cv.waitKey(\u001b[32m1\u001b[39m) == \u001b[38;5;28mord\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mq\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m     35\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[31merror\u001b[39m: OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:973: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'cv::imshow'\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 실습. 카드 하나씩 새 창에 표시\n",
+    "# 실습. 카드 하나씩 새 창에 표시(강사님 풀이)\n",
     "# 1. 제시된 이미지의 카드를\n",
     "# 2. 하나씩 별도로 새 창에 표시하기\n",
+    "\n",
+    "img = cv.imread(\"../images/playing_cards.png\")\n",
+    "copied = img.copy()\n",
+    "name = \"Cards\"\n",
+    "cv.namedWindow(name)\n",
+    "\n",
+    "gray = cv.cvtColor(copied, cv.COLOR_BGR2GRAY)\n",
+    "ret, binary = cv.threshold(gray, -1, 255, cv.THRESH_BINARY | cv.THRESH_OTSU)\n",
+    "contours, _ = cv.findContours(binary, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_NONE)\n",
+    "\n",
+    "for idx, contour in enumerate(contours):\n",
+    "    if cv.contourArea(contour) > 1300:\n",
+    "        x, y, width, height = cv.boundingRect(contour)\n",
+    "\n",
+    "        crop = img[y:y+height, x:x+width]\n",
+    "        cv.imshow(f\"Card {idx}\", crop)\n",
+    "\n",
+    "        cv.rectangle(img, (x,y), (x+width, y+height), (0,255,0), 2, cv.LINE_AA)\n",
+    "\n",
+    "cv.imshow(\"Platying cart\", img)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44ba44d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습. 카드 하나씩 새 창에 표시+트랙바 적용(강사님 풀이)\n",
+    "\n",
+    "img = cv.imread(\"../images/playing_cards.png\")\n",
+    "copied = img.copy()\n",
+    "copied_2 = img.copy()\n",
+    "gray = cv.cvtColor(copied, cv.COLOR_BGR2GRAY)\n",
+    "ret, binary = cv.threshold(gray, -1, 255, cv.THRESH_BINARY | cv.THRESH_OTSU)\n",
+    "contours, _ = cv.findContours(binary, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_NONE)\n",
+    "\n",
+    "crops = []\n",
+    "for idx, contour in enumerate(contours):\n",
+    "    if cv.contourArea(contour) > 1300:\n",
+    "        x, y, width, height = cv.boundingRect(contour)\n",
+    "        cv.rectangle(copied_2, (x,y), (x+width, y+height), (0,255,0), 4, cv.LINE_AA)\n",
+    "        crop = img[y:y+height, x:x+width]\n",
+    "        crops.append(crop)\n",
+    "\n",
+    "def on_trackbar(val):\n",
+    "    target = crops[val]\n",
+    "    cv.imshow(\"Card\", target)\n",
+    "\n",
+    "name = \"Original\"\n",
+    "cv.namedWindow(name)\n",
+    "cv.createTrackbar(\"Index\", name, 0, len(crops)-1,  on_trackbar)\n",
+    "\n",
+    "cv.imshow(name, copied_2)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4020c791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 실습. 카드 하나씩 새 창에 표시+트랙바 적용(내 풀이)\n",
     "\n",
     "img = cv.imread(\"../images/playing_cards.png\")\n",
     "copied = img.copy()\n",
@@ -314,11 +360,11 @@
     "    \n",
     "    x, y, width, height = cv.boundingRect(filtered_contours[index])\n",
     "    cv.rectangle(target, (x,y), (x+width, y+height), (0,255,0), 2, cv.LINE_AA)\n",
-    "    \n",
+    "\n",
     "    cv.imshow(name, target)\n",
-    "    cv.imshow(f\"card{index+1}\", img[x:x+width, y:y+height])\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "    cv.imshow(f\"card{index+1}\", img[y:y+height, x:x+width])\n",
+    "        \n",
     "    if cv.waitKey(1) == ord(\"q\"):\n",
     "        break\n",
     "\n",
